// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SideNav should change width after clicking on burger icon 1`] = `
.c9 {
  font-size: 2.4rem;
  cursor: inherit;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
}

.c9 * {
  fill: #607890;
}

.c15 {
  font-size: 1.6rem;
  cursor: inherit;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
}

.c15 * {
  fill: #607890;
}

.c10 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow-y: auto;
  overflow-x: hidden;
  padding: 0;
  margin: 0;
  list-style-type: none;
  color: #ffffff;
}

.c19 {
  -webkit-flex: unset;
  -ms-flex: unset;
  flex: unset;
  overflow: unset;
  background-color: #F38037;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-area: icon;
  min-width: 60px;
  min-height: 48px;
}

.c2 .c8 {
  font-size: 2.0rem;
}

.c13 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
}

.c16 {
  grid-area: dropdownIcon;
  margin-right: 15px;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
}

.c11 {
  width: 100%;
  -webkit-text-decoration: none;
  text-decoration: none;
  box-sizing: border-box;
  background-color: inherit;
  display: grid;
  grid-template-areas: 'icon header dropdownIcon' 'submenu submenu submenu';
  grid-template-columns: min-content 1fr min-content;
  grid-template-rows: 48px min-content;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
  border-bottom: 1px solid #F38037;
}

.c11 > .c12 {
  font-size: 1.6rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.6rem;
  grid-area: header;
  color: #ffffff;
  font-weight: 400;
}

.c14 {
  width: 100%;
  -webkit-text-decoration: none;
  text-decoration: none;
  box-sizing: border-box;
  background-color: inherit;
  display: grid;
  grid-template-areas: 'icon header dropdownIcon' 'submenu submenu submenu';
  grid-template-columns: min-content 1fr min-content;
  grid-template-rows: 48px min-content;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
}

.c14 > .c12 {
  font-size: 1.6rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.6rem;
  grid-area: header;
  color: #ffffff;
  font-weight: 400;
}

.c18 {
  grid-area: submenu;
  border-top: 1px solid;
  padding: 0;
  max-height: 0;
  overflow: hidden;
  box-sizing: border-box;
  -webkit-transition: max-height 0.2s ease-out;
  transition: max-height 0.2s ease-out;
  border-color: #F38037;
}

.c18 > li > :first-child {
  padding-left: 60px;
}

.c6 {
  display: block;
  position: absolute;
  width: calc(2.0rem * 1.33);
  height: calc(2.0rem * 0.2);
  background: #607890;
  border-radius: calc(2.0rem * 0.2);
  opacity: 1;
  left: 0;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: 0.25s ease-in-out;
  transition: 0.25s ease-in-out;
}

.c6:nth-child(1) {
  top: 0;
}

.c6:nth-child(2) {
  top: calc(2.0rem * 0.4);
}

.c6:nth-child(3) {
  top: calc(2.0rem * 0.8);
}

.c4 {
  border: none;
  background-color: transparent;
  outline: none;
  width: calc(2.0rem * 1.33);
  height: 2.0rem;
  position: relative;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  cursor: pointer;
}

.c4 .c5:nth-child(1) {
  top: calc(2.0rem * 0.4);
  -webkit-transform: rotate(135deg);
  -ms-transform: rotate(135deg);
  transform: rotate(135deg);
}

.c4 .c5:nth-child(2) {
  opacity: 0;
  left: -60px;
}

.c4 .c5:nth-child(3) {
  top: calc(2.0rem * 0.4);
  -webkit-transform: rotate(-135deg);
  -ms-transform: rotate(-135deg);
  transform: rotate(-135deg);
}

.c1 {
  width: 100%;
  -webkit-text-decoration: none;
  text-decoration: none;
  box-sizing: border-box;
  background-color: inherit;
  display: grid;
  grid-template-areas: 'icon header dropdownIcon' 'submenu submenu submenu';
  grid-template-columns: min-content 1fr min-content;
  grid-template-rows: 48px min-content;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: default;
  border-bottom: 1px solid #F38037;
  background-color: #F27221;
  border: 0;
}

.c1 > .c12 {
  font-size: 1.6rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.6rem;
  grid-area: header;
  color: #ffffff;
  font-weight: 400;
}

.c1 .c3 * {
  background: #ffffff;
}

.c20 .c12,
.c20 .c7 {
  opacity: 0;
  -webkit-transition: opacity 0.2s;
  transition: opacity 0.2s;
}

.c20 .c17 {
  max-height: 0;
  -webkit-transition: max-height 0.2s ease-out;
  transition: max-height 0.2s ease-out;
}

.c0 {
  height: 100vh;
  background-color: #dfe4e9;
  width: 0;
  position: fixed;
  z-index: 1;
  top: 0;
  -webkit-transition: 0.2s;
  transition: 0.2s;
  left: 0;
  width: 250px;
  background-color: #F38037;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 ul::-webkit-scrollbar {
  width: 5px;
  background-color: #F38037;
}

.c0 ul::-webkit-scrollbar-thumb {
  border-radius: 10px;
  background-color: #98A7B7;
}

.c0 svg * {
  fill: #ffffff;
}

.c0 .c12,
.c0 .c7 {
  opacity: 1;
  -webkit-transition: opacity 0.4s;
  transition: opacity 0.4s;
}

<nav
  class="sc-fzXfRb c0"
  id="medly-sidenav"
  open=""
>
  <div
    class="c1"
    font-variant="body1"
  >
    <div
      class="c2"
    >
      <button
        class="c3 c4"
        id="burgerIcon"
        open=""
      >
        <span
          class="c5 c6"
        />
        <span
          class="c5 c6"
        />
        <span
          class="c5 c6"
        />
      </button>
    </div>
    <div
      class="c7 "
    >
      <svg
        class="c8 c9"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.998 19.328v-5h4v5c0 .55.45 1 1 1h3c.55 0 1-.45 1-1v-7h1.7c.46 0 .68-.57.33-.87l-8.36-7.53c-.38-.34-.96-.34-1.34 0l-8.36 7.53c-.34.3-.13.87.33.87h1.7v7c0 .55.45 1 1 1h3c.55 0 1-.45 1-1z"
          fill="#000"
          fill-opacity=".54"
        />
      </svg>
    </div>
  </div>
  <ul
    class="c10"
  >
    <li
      class="c11"
      font-variant="body1"
    >
      <div
        class="c2"
      >
        <svg
          class="c8 c9"
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.998 19.328v-5h4v5c0 .55.45 1 1 1h3c.55 0 1-.45 1-1v-7h1.7c.46 0 .68-.57.33-.87l-8.36-7.53c-.38-.34-.96-.34-1.34 0l-8.36 7.53c-.34.3-.13.87.33.87h1.7v7c0 .55.45 1 1 1h3c.55 0 1-.45 1-1z"
            fill="#000"
            fill-opacity=".54"
          />
        </svg>
      </div>
      <span
        class="c12 c13"
      >
        Home
      </span>
    </li>
    <li
      class="c14"
      font-variant="body1"
    >
      <div
        class="c2"
      >
        <svg
          class="c8 c9"
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M15.187 14.472h.79l4.24 4.26c.41.41.41 1.08 0 1.49-.41.41-1.08.41-1.49 0l-4.25-4.25v-.79l-.27-.28a6.5 6.5 0 0 1-5.34 1.48c-2.78-.47-5-2.79-5.34-5.59a6.505 6.505 0 0 1 7.27-7.27c2.8.34 5.12 2.56 5.59 5.34a6.5 6.5 0 0 1-1.48 5.34l.28.27zm-9.71-4.5c0 2.49 2.01 4.5 4.5 4.5s4.5-2.01 4.5-4.5-2.01-4.5-4.5-4.5-4.5 2.01-4.5 4.5z"
            fill="#000"
            fill-opacity=".54"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <span
        class="c12 c13"
      >
        Search
      </span>
      <svg
        class="c8 c15 c16"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M15.875 9l-3.88 3.88L8.115 9a.996.996 0 1 0-1.41 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59a.996.996 0 0 0 0-1.41c-.39-.38-1.03-.39-1.42 0z"
          fill="#000"
          fill-opacity=".54"
        />
      </svg>
      <ul
        class="c17 c18"
      >
        <li
          class="c11"
          font-variant="body1"
        >
          <span
            class="c12 c13"
          >
            Cars
          </span>
        </li>
        <li
          class="c11"
          font-variant="body1"
        >
          <span
            class="c12 c13"
          >
            Bikes
          </span>
        </li>
        <li
          class="c11"
          font-variant="body1"
        >
          <span
            class="c12 c13"
          >
            Phones
          </span>
        </li>
      </ul>
    </li>
    <ul
      class="c10 c19"
    >
      <span
        class="c12 c13"
      >
        Hi Dummy Username
      </span>
    </ul>
  </ul>
</nav>
`;

exports[`SideNav should change width when clicked on item with sidenavOpenCloseOnClick prop given 1`] = `
.c9 {
  font-size: 2.4rem;
  cursor: inherit;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
}

.c9 * {
  fill: #607890;
}

.c15 {
  font-size: 1.6rem;
  cursor: inherit;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
}

.c15 * {
  fill: #607890;
}

.c10 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow-y: auto;
  overflow-x: hidden;
  padding: 0;
  margin: 0;
  list-style-type: none;
  color: #ffffff;
}

.c20 {
  -webkit-flex: unset;
  -ms-flex: unset;
  flex: unset;
  overflow: unset;
  background-color: #F38037;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-area: icon;
  min-width: 60px;
  min-height: 48px;
}

.c2 .c8 {
  font-size: 2.0rem;
}

.c13 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
}

.c17 {
  grid-area: dropdownIcon;
  margin-right: 15px;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
}

.c11 {
  width: 100%;
  -webkit-text-decoration: none;
  text-decoration: none;
  box-sizing: border-box;
  background-color: inherit;
  display: grid;
  grid-template-areas: 'icon header dropdownIcon' 'submenu submenu submenu';
  grid-template-columns: min-content 1fr min-content;
  grid-template-rows: 48px min-content;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
  border-bottom: 1px solid #F38037;
}

.c11 > .c12 {
  font-size: 1.6rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.6rem;
  grid-area: header;
  color: #ffffff;
  font-weight: 400;
}

.c22 > .c12 {
  font-size: 1.6rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.6rem;
  grid-area: header;
  color: #ffffff;
  font-weight: 400;
}

.c14 {
  width: 100%;
  -webkit-text-decoration: none;
  text-decoration: none;
  box-sizing: border-box;
  background-color: inherit;
  display: grid;
  grid-template-areas: 'icon header dropdownIcon' 'submenu submenu submenu';
  grid-template-columns: min-content 1fr min-content;
  grid-template-rows: 48px min-content;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
}

.c14 > .c16 {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.c14 > ul {
  max-height: 90vh;
  -webkit-transition: max-height 1s ease-out;
  transition: max-height 1s ease-out;
}

.c14 > .c12 {
  font-size: 1.6rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.6rem;
  grid-area: header;
  color: #ffffff;
  font-weight: 400;
}

.c19 {
  grid-area: submenu;
  border-top: 1px solid;
  padding: 0;
  max-height: 0;
  overflow: hidden;
  box-sizing: border-box;
  -webkit-transition: max-height 0.2s ease-out;
  transition: max-height 0.2s ease-out;
  border-color: #F38037;
}

.c19 > li > :first-child {
  padding-left: 60px;
}

.c6 {
  display: block;
  position: absolute;
  width: calc(2.0rem * 1.33);
  height: calc(2.0rem * 0.2);
  background: #607890;
  border-radius: calc(2.0rem * 0.2);
  opacity: 1;
  left: 0;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: 0.25s ease-in-out;
  transition: 0.25s ease-in-out;
}

.c6:nth-child(1) {
  top: 0;
}

.c6:nth-child(2) {
  top: calc(2.0rem * 0.4);
}

.c6:nth-child(3) {
  top: calc(2.0rem * 0.8);
}

.c4 {
  border: none;
  background-color: transparent;
  outline: none;
  width: calc(2.0rem * 1.33);
  height: 2.0rem;
  position: relative;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  cursor: pointer;
}

.c4 .c5:nth-child(1) {
  top: calc(2.0rem * 0.4);
  -webkit-transform: rotate(135deg);
  -ms-transform: rotate(135deg);
  transform: rotate(135deg);
}

.c4 .c5:nth-child(2) {
  opacity: 0;
  left: -60px;
}

.c4 .c5:nth-child(3) {
  top: calc(2.0rem * 0.4);
  -webkit-transform: rotate(-135deg);
  -ms-transform: rotate(-135deg);
  transform: rotate(-135deg);
}

.c1 {
  width: 100%;
  -webkit-text-decoration: none;
  text-decoration: none;
  box-sizing: border-box;
  background-color: inherit;
  display: grid;
  grid-template-areas: 'icon header dropdownIcon' 'submenu submenu submenu';
  grid-template-columns: min-content 1fr min-content;
  grid-template-rows: 48px min-content;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: default;
  border-bottom: 1px solid #F38037;
  background-color: #F27221;
  border: 0;
}

.c1 > .c12 {
  font-size: 1.6rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.6rem;
  grid-area: header;
  color: #ffffff;
  font-weight: 400;
}

.c1 .c3 * {
  background: #ffffff;
}

.c21 .c12,
.c21 .c7 {
  opacity: 0;
  -webkit-transition: opacity 0.2s;
  transition: opacity 0.2s;
}

.c21 .c18 {
  max-height: 0;
  -webkit-transition: max-height 0.2s ease-out;
  transition: max-height 0.2s ease-out;
}

.c0 {
  height: 100vh;
  background-color: #dfe4e9;
  width: 0;
  position: fixed;
  z-index: 1;
  top: 0;
  -webkit-transition: 0.2s;
  transition: 0.2s;
  left: 0;
  width: 250px;
  background-color: #F38037;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 ul::-webkit-scrollbar {
  width: 5px;
  background-color: #F38037;
}

.c0 ul::-webkit-scrollbar-thumb {
  border-radius: 10px;
  background-color: #98A7B7;
}

.c0 svg * {
  fill: #ffffff;
}

.c0 .c12,
.c0 .c7 {
  opacity: 1;
  -webkit-transition: opacity 0.4s;
  transition: opacity 0.4s;
}

<nav
  class="sc-fzXfRb c0"
  id="medly-sidenav"
  open=""
>
  <div
    class="c1"
    font-variant="body1"
  >
    <div
      class="c2"
    >
      <button
        class="c3 c4"
        id="burgerIcon"
        open=""
      >
        <span
          class="c5 c6"
        />
        <span
          class="c5 c6"
        />
        <span
          class="c5 c6"
        />
      </button>
    </div>
    <div
      class="c7 "
    >
      <svg
        class="c8 c9"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.998 19.328v-5h4v5c0 .55.45 1 1 1h3c.55 0 1-.45 1-1v-7h1.7c.46 0 .68-.57.33-.87l-8.36-7.53c-.38-.34-.96-.34-1.34 0l-8.36 7.53c-.34.3-.13.87.33.87h1.7v7c0 .55.45 1 1 1h3c.55 0 1-.45 1-1z"
          fill="#000"
          fill-opacity=".54"
        />
      </svg>
    </div>
  </div>
  <ul
    class="c10"
  >
    <li
      class="c11"
      font-variant="body1"
    >
      <div
        class="c2"
      >
        <svg
          class="c8 c9"
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.998 19.328v-5h4v5c0 .55.45 1 1 1h3c.55 0 1-.45 1-1v-7h1.7c.46 0 .68-.57.33-.87l-8.36-7.53c-.38-.34-.96-.34-1.34 0l-8.36 7.53c-.34.3-.13.87.33.87h1.7v7c0 .55.45 1 1 1h3c.55 0 1-.45 1-1z"
            fill="#000"
            fill-opacity=".54"
          />
        </svg>
      </div>
      <span
        class="c12 c13"
      >
        Home
      </span>
    </li>
    <li
      class="c14"
      font-variant="body1"
      open=""
    >
      <div
        class="c2"
      >
        <svg
          class="c8 c9"
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M15.187 14.472h.79l4.24 4.26c.41.41.41 1.08 0 1.49-.41.41-1.08.41-1.49 0l-4.25-4.25v-.79l-.27-.28a6.5 6.5 0 0 1-5.34 1.48c-2.78-.47-5-2.79-5.34-5.59a6.505 6.505 0 0 1 7.27-7.27c2.8.34 5.12 2.56 5.59 5.34a6.5 6.5 0 0 1-1.48 5.34l.28.27zm-9.71-4.5c0 2.49 2.01 4.5 4.5 4.5s4.5-2.01 4.5-4.5-2.01-4.5-4.5-4.5-4.5 2.01-4.5 4.5z"
            fill="#000"
            fill-opacity=".54"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <span
        class="c12 c13"
      >
        Search
      </span>
      <svg
        class="c8 c15 c16 c17"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M15.875 9l-3.88 3.88L8.115 9a.996.996 0 1 0-1.41 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59a.996.996 0 0 0 0-1.41c-.39-.38-1.03-.39-1.42 0z"
          fill="#000"
          fill-opacity=".54"
        />
      </svg>
      <ul
        class="c18 c19"
      >
        <li
          class="c11"
          font-variant="body1"
        >
          <span
            class="c12 c13"
          >
            Cars
          </span>
        </li>
        <li
          class="c11"
          font-variant="body1"
        >
          <span
            class="c12 c13"
          >
            Bikes
          </span>
        </li>
        <li
          class="c11"
          font-variant="body1"
        >
          <span
            class="c12 c13"
          >
            Phones
          </span>
        </li>
      </ul>
    </li>
    <ul
      class="c10 c20"
    >
      <span
        class="c12 c13"
      >
        Hi Dummy Username
      </span>
    </ul>
  </ul>
</nav>
`;

exports[`SideNav should close sidenav if we click outside 1`] = `
.c11 {
  font-size: 2.4rem;
  cursor: inherit;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
}

.c11 * {
  fill: #607890;
}

.c8 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow-y: auto;
  overflow-x: hidden;
  padding: 0;
  margin: 0;
  list-style-type: none;
  color: #ffffff;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-area: icon;
  min-width: 60px;
  min-height: 48px;
}

.c2 .c10 {
  font-size: 2.0rem;
}

.c13 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
}

.c17 > .c12 {
  font-size: 1.6rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.6rem;
  grid-area: header;
  color: #ffffff;
  font-weight: 700;
}

.c18 > .c12 {
  font-size: 1.6rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.6rem;
  grid-area: header;
  color: #ffffff;
  font-weight: 400;
}

.c9 {
  width: 100%;
  -webkit-text-decoration: none;
  text-decoration: none;
  box-sizing: border-box;
  background-color: #607890;
  display: grid;
  grid-template-areas: 'icon header dropdownIcon' 'submenu submenu submenu';
  grid-template-columns: min-content 1fr min-content;
  grid-template-rows: 48px min-content;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
  border-bottom: 1px solid #435465;
}

.c9 > .sc-fzXfQZ {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.c9 > ul {
  max-height: 90vh;
  -webkit-transition: max-height 1s ease-out;
  transition: max-height 1s ease-out;
}

.c9 ul,
.c9 li {
  border-color: #435465;
}

.c9 > .c12 {
  font-size: 1.6rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.6rem;
  grid-area: header;
  color: #ffffff;
  font-weight: 700;
}

.c14 {
  width: 100%;
  -webkit-text-decoration: none;
  text-decoration: none;
  box-sizing: border-box;
  background-color: inherit;
  display: grid;
  grid-template-areas: 'icon header dropdownIcon' 'submenu submenu submenu';
  grid-template-columns: min-content 1fr min-content;
  grid-template-rows: 48px min-content;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: default;
  border-bottom: 1px solid #F38037;
}

.c14 > .c12 {
  font-size: 1.6rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.6rem;
  grid-area: header;
  color: #ffffff;
  font-weight: 400;
}

.c6 {
  display: block;
  position: absolute;
  width: calc(2.0rem * 1.33);
  height: calc(2.0rem * 0.2);
  background: #607890;
  border-radius: calc(2.0rem * 0.2);
  opacity: 1;
  left: 0;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: 0.25s ease-in-out;
  transition: 0.25s ease-in-out;
}

.c6:nth-child(1) {
  top: 0;
}

.c6:nth-child(2) {
  top: calc(2.0rem * 0.4);
}

.c6:nth-child(3) {
  top: calc(2.0rem * 0.8);
}

.c4 {
  border: none;
  background-color: transparent;
  outline: none;
  width: calc(2.0rem * 1.33);
  height: 2.0rem;
  position: relative;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  cursor: pointer;
}

.c16 .c5:nth-child(1) {
  top: calc(2.0rem * 0.4);
  -webkit-transform: rotate(135deg);
  -ms-transform: rotate(135deg);
  transform: rotate(135deg);
}

.c16 .c5:nth-child(2) {
  opacity: 0;
  left: -60px;
}

.c16 .c5:nth-child(3) {
  top: calc(2.0rem * 0.4);
  -webkit-transform: rotate(-135deg);
  -ms-transform: rotate(-135deg);
  transform: rotate(-135deg);
}

.c1 {
  width: 100%;
  -webkit-text-decoration: none;
  text-decoration: none;
  box-sizing: border-box;
  background-color: inherit;
  display: grid;
  grid-template-areas: 'icon header dropdownIcon' 'submenu submenu submenu';
  grid-template-columns: min-content 1fr min-content;
  grid-template-rows: 48px min-content;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: default;
  border-bottom: 1px solid #F38037;
  background-color: #F27221;
  border: 0;
}

.c1 > .c12 {
  font-size: 1.6rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.6rem;
  grid-area: header;
  color: #ffffff;
  font-weight: 400;
}

.c1 .c3 * {
  background: #ffffff;
}

.c0 {
  height: 100vh;
  background-color: #dfe4e9;
  width: 0;
  position: fixed;
  z-index: 1;
  top: 0;
  -webkit-transition: 0.2s;
  transition: 0.2s;
  left: 0;
  width: 60px;
  background-color: #F38037;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 ul::-webkit-scrollbar {
  width: 5px;
  background-color: #F38037;
}

.c0 ul::-webkit-scrollbar-thumb {
  border-radius: 10px;
  background-color: #98A7B7;
}

.c0 svg * {
  fill: #ffffff;
}

.c0 .c12,
.c0 .c7 {
  opacity: 0;
  -webkit-transition: opacity 0.2s;
  transition: opacity 0.2s;
}

.c0 .sc-LzLqC {
  max-height: 0;
  -webkit-transition: max-height 0.2s ease-out;
  transition: max-height 0.2s ease-out;
}

.c15 .c12,
.c15 .c7 {
  opacity: 1;
  -webkit-transition: opacity 0.4s;
  transition: opacity 0.4s;
}

<nav
  class="sc-fzXfRb c0"
  id="medly-sidenav"
>
  <div
    class="c1"
    font-variant="body1"
  >
    <div
      class="c2"
    >
      <button
        class="c3 c4"
        id="burgerIcon"
      >
        <span
          class="c5 c6"
        />
        <span
          class="c5 c6"
        />
        <span
          class="c5 c6"
        />
      </button>
    </div>
    <div
      class="c7 "
    />
  </div>
  <ul
    class="c8"
  >
    <li
      class="c9"
      font-variant="body1"
      open=""
    >
      <div
        class="c2"
      >
        <svg
          class="c10 c11"
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.998 19.328v-5h4v5c0 .55.45 1 1 1h3c.55 0 1-.45 1-1v-7h1.7c.46 0 .68-.57.33-.87l-8.36-7.53c-.38-.34-.96-.34-1.34 0l-8.36 7.53c-.34.3-.13.87.33.87h1.7v7c0 .55.45 1 1 1h3c.55 0 1-.45 1-1z"
            fill="#000"
            fill-opacity=".54"
          />
        </svg>
      </div>
      <span
        class="c12 c13"
      >
        Home
      </span>
    </li>
    <li
      class="c14"
      font-variant="body1"
    >
      <span
        class="c12 c13"
      >
        Edit
      </span>
    </li>
  </ul>
</nav>
`;

exports[`SideNav should render properly 1`] = `
.c8 {
  font-size: 2.4rem;
  cursor: inherit;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
}

.c8 * {
  fill: #607890;
}

.c14 {
  font-size: 1.6rem;
  cursor: inherit;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
}

.c14 * {
  fill: #607890;
}

.c9 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow-y: auto;
  overflow-x: hidden;
  padding: 0;
  margin: 0;
  list-style-type: none;
  color: #ffffff;
}

.c18 {
  -webkit-flex: unset;
  -ms-flex: unset;
  flex: unset;
  overflow: unset;
  background-color: #F38037;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-area: icon;
  min-width: 60px;
  min-height: 48px;
}

.c2 .c7 {
  font-size: 2.0rem;
}

.c12 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
}

.c15 {
  grid-area: dropdownIcon;
  margin-right: 15px;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
}

.c10 {
  width: 100%;
  -webkit-text-decoration: none;
  text-decoration: none;
  box-sizing: border-box;
  background-color: inherit;
  display: grid;
  grid-template-areas: 'icon header dropdownIcon' 'submenu submenu submenu';
  grid-template-columns: min-content 1fr min-content;
  grid-template-rows: 48px min-content;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
  border-bottom: 1px solid #F38037;
}

.c10 > .c11 {
  font-size: 1.6rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.6rem;
  grid-area: header;
  color: #ffffff;
  font-weight: 400;
}

.c13 {
  width: 100%;
  -webkit-text-decoration: none;
  text-decoration: none;
  box-sizing: border-box;
  background-color: inherit;
  display: grid;
  grid-template-areas: 'icon header dropdownIcon' 'submenu submenu submenu';
  grid-template-columns: min-content 1fr min-content;
  grid-template-rows: 48px min-content;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
}

.c13 > .c11 {
  font-size: 1.6rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.6rem;
  grid-area: header;
  color: #ffffff;
  font-weight: 400;
}

.c17 {
  grid-area: submenu;
  border-top: 1px solid;
  padding: 0;
  max-height: 0;
  overflow: hidden;
  box-sizing: border-box;
  -webkit-transition: max-height 0.2s ease-out;
  transition: max-height 0.2s ease-out;
  border-color: #F38037;
}

.c17 > li > :first-child {
  padding-left: 60px;
}

.c5 {
  display: block;
  position: absolute;
  width: calc(2.0rem * 1.33);
  height: calc(2.0rem * 0.2);
  background: #607890;
  border-radius: calc(2.0rem * 0.2);
  opacity: 1;
  left: 0;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: 0.25s ease-in-out;
  transition: 0.25s ease-in-out;
}

.c5:nth-child(1) {
  top: 0;
}

.c5:nth-child(2) {
  top: calc(2.0rem * 0.4);
}

.c5:nth-child(3) {
  top: calc(2.0rem * 0.8);
}

.c4 {
  border: none;
  background-color: transparent;
  outline: none;
  width: calc(2.0rem * 1.33);
  height: 2.0rem;
  position: relative;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  cursor: pointer;
}

.c1 {
  width: 100%;
  -webkit-text-decoration: none;
  text-decoration: none;
  box-sizing: border-box;
  background-color: inherit;
  display: grid;
  grid-template-areas: 'icon header dropdownIcon' 'submenu submenu submenu';
  grid-template-columns: min-content 1fr min-content;
  grid-template-rows: 48px min-content;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: default;
  border-bottom: 1px solid #F38037;
  background-color: #F27221;
  border: 0;
}

.c1 > .c11 {
  font-size: 1.6rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.6rem;
  grid-area: header;
  color: #ffffff;
  font-weight: 400;
}

.c1 .c3 * {
  background: #ffffff;
}

.c0 {
  height: 100vh;
  background-color: #dfe4e9;
  width: 0;
  position: fixed;
  z-index: 1;
  top: 0;
  -webkit-transition: 0.2s;
  transition: 0.2s;
  left: 0;
  width: 60px;
  background-color: #F38037;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 ul::-webkit-scrollbar {
  width: 5px;
  background-color: #F38037;
}

.c0 ul::-webkit-scrollbar-thumb {
  border-radius: 10px;
  background-color: #98A7B7;
}

.c0 svg * {
  fill: #ffffff;
}

.c0 .c11,
.c0 .c6 {
  opacity: 0;
  -webkit-transition: opacity 0.2s;
  transition: opacity 0.2s;
}

.c0 .c16 {
  max-height: 0;
  -webkit-transition: max-height 0.2s ease-out;
  transition: max-height 0.2s ease-out;
}

<div>
  <nav
    class="sc-fzXfRb c0"
    id="medly-sidenav"
  >
    <div
      class="c1"
      font-variant="body1"
    >
      <div
        class="c2"
      >
        <button
          class="c3 c4"
          id="burgerIcon"
        >
          <span
            class="c5"
          />
          <span
            class="c5"
          />
          <span
            class="c5"
          />
        </button>
      </div>
      <div
        class="c6 "
      >
        <svg
          class="c7 c8"
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.998 19.328v-5h4v5c0 .55.45 1 1 1h3c.55 0 1-.45 1-1v-7h1.7c.46 0 .68-.57.33-.87l-8.36-7.53c-.38-.34-.96-.34-1.34 0l-8.36 7.53c-.34.3-.13.87.33.87h1.7v7c0 .55.45 1 1 1h3c.55 0 1-.45 1-1z"
            fill="#000"
            fill-opacity=".54"
          />
        </svg>
      </div>
    </div>
    <ul
      class="c9"
    >
      <li
        class="c10"
        font-variant="body1"
      >
        <div
          class="c2"
        >
          <svg
            class="c7 c8"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.998 19.328v-5h4v5c0 .55.45 1 1 1h3c.55 0 1-.45 1-1v-7h1.7c.46 0 .68-.57.33-.87l-8.36-7.53c-.38-.34-.96-.34-1.34 0l-8.36 7.53c-.34.3-.13.87.33.87h1.7v7c0 .55.45 1 1 1h3c.55 0 1-.45 1-1z"
              fill="#000"
              fill-opacity=".54"
            />
          </svg>
        </div>
        <span
          class="c11 c12"
        >
          Home
        </span>
      </li>
      <li
        class="c13"
        font-variant="body1"
      >
        <div
          class="c2"
        >
          <svg
            class="c7 c8"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M15.187 14.472h.79l4.24 4.26c.41.41.41 1.08 0 1.49-.41.41-1.08.41-1.49 0l-4.25-4.25v-.79l-.27-.28a6.5 6.5 0 0 1-5.34 1.48c-2.78-.47-5-2.79-5.34-5.59a6.505 6.505 0 0 1 7.27-7.27c2.8.34 5.12 2.56 5.59 5.34a6.5 6.5 0 0 1-1.48 5.34l.28.27zm-9.71-4.5c0 2.49 2.01 4.5 4.5 4.5s4.5-2.01 4.5-4.5-2.01-4.5-4.5-4.5-4.5 2.01-4.5 4.5z"
              fill="#000"
              fill-opacity=".54"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <span
          class="c11 c12"
        >
          Search
        </span>
        <svg
          class="c7 c14 c15"
          fill="none"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15.875 9l-3.88 3.88L8.115 9a.996.996 0 1 0-1.41 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59a.996.996 0 0 0 0-1.41c-.39-.38-1.03-.39-1.42 0z"
            fill="#000"
            fill-opacity=".54"
          />
        </svg>
        <ul
          class="c16 c17"
        >
          <li
            class="c10"
            font-variant="body1"
          >
            <span
              class="c11 c12"
            >
              Cars
            </span>
          </li>
          <li
            class="c10"
            font-variant="body1"
          >
            <span
              class="c11 c12"
            >
              Bikes
            </span>
          </li>
          <li
            class="c10"
            font-variant="body1"
          >
            <span
              class="c11 c12"
            >
              Phones
            </span>
          </li>
        </ul>
      </li>
      <ul
        class="c9 c18"
      >
        <span
          class="c11 c12"
        >
          Hi Dummy Username
        </span>
      </ul>
    </ul>
  </nav>
</div>
`;
